--- a/index.html
+++ b/index.html
@@ -1,5 +1,26 @@
 <html>
   <body>
-      Hello DBC!
+    <header>
+      <nav>
+        About
+        Videos
+        Projects
+        Places
+      </nav>
+    </header>
+
+    <section>
+      Main Content
+    </section>
+
+    <section>
+      <section>Videos</section>
+      <section>Projects</section>
+      <section>Places/Pics</section>
+    </section>
+
+    <footer>
+    </footer>
+
   </body>
 </html>
