--- a/index.html
+++ b/index.html
@@ -1,28 +1,58 @@
 <html>
   <body>
     <header>
-      header section ||
+      Welcome to Brian's Site ||
       <nav>
-        About
-        Videos
-        Projects
-        Places
+        <a href="#">Blog</a> |
+        <a href="#">Projects</a> |
+        <a href="#">Videos</a> |
+        <a href="#">Places</a>
       </nav>
     </header>
 
     <section>
-      Main Content
+      <h1>Featured Blog Post</h1>
+      <h2>Tech Themes - Control Yourself and Others</h2>
+      <p>Posted: October 4, 2015</p>
+      <h3>The Benefits of Control</h3>
+      <p>Version control is like living for today and not giving up the past. Version control is when each of us gets our own way, and the group stays happy. Version control is being in two places at once.</p>
+      <p><a href="#">Read more</a></p>
+      <img src="imgs/haitiShore.jpg" width="400px" alt="Filming in Haiti">
     </section>
 
     <section>
-      <section>Videos</section>
-      <section>Projects</section>
-      <section>Blog</section>
+      <div>
+        <h2>Blog</h2>
+        <ul>
+          <li><a href="#">First Blog Link</a></li>
+          <li><a href="#">Second Blog Link</a></li>
+        </ul>
+      </div>
+
+      <div>
+        <h2>Projects</h2>
+        <ul>
+            <li><a href="#">First Project</a>
+            <li><a href="#">Second Project</a></li>
+        </ul>
+      </div>
+      <div>
+
+        <h2>Videos</h2>
+        <ul>
+          <li><a href="#">First Video link</a></li>
+          <li><a href="#">Second Video link</a></li>
+        </ul>
+        </div>
     </section>
 
-    <section>Places | Pics</section>
+    <section>
+      <h2>Places | Pics</h2>
+      <p><a href="#">One place</a></p>
+    </section>
 
     <footer>
+      <p>Made by Brian Wagner | &#169; 2015
     </footer>
 
   </body>
