--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
+<!DOCTYPE HTML>
 <html>
+  <head>
+      <meta charset="utf-8" />
+      <title>Brian's Site</title>
+    </head>
+
   <body>
     <header>
       Welcome to Brian's Site ||
