Fix img width syntax

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h3>The Benefits of Control</h3>
       <p>Version control is like living for today and not giving up the past. Version control is when each of us gets our own way, and the group stays happy. Version control is being in two places at once.</p>
       <p><a href="#">Read more</a></p>
-      <img src="imgs/haitiShore.jpg" width="400px" alt="Filming in Haiti">
+      <img src="imgs/haitiShore.jpg" width="400" alt="Filming in Haiti">
     </section>
 
     <section>
