--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
       Welcome to Brian's Site ||
       <nav>
-        <a href="#">Blog</a> |
+        <a href="blog/index.html">Blog</a> |
         <a href="#">Projects</a> |
         <a href="#">Videos</a> |
         <a href="#">Places</a>
