Add blog template. Fix unclosed tag in footer.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </section>
 
     <footer>
-      <p>Made by Brian Wagner | &#169; 2015
+      <p>Made by Brian Wagner | &#169; 2015</p>
     </footer>
 
   </body>
