--- a/index.html
+++ b/index.html
@@ -3,63 +3,89 @@
   <head>
       <meta charset="utf-8" />
       <title>Brian's Site</title>
+      <link rel="stylesheet" type="text/css" href="stylesheets/default.css">
     </head>
 
   <body>
-    <header>
-      Welcome to Brian's Site ||
-      <nav>
-        <a href="blog/index.html">Blog</a> |
-        <a href="#">Projects</a> |
-        <a href="#">Videos</a> |
-        <a href="#">Places</a>
-      </nav>
-    </header>
-
-    <section>
-      <h1>Featured Blog Post</h1>
-      <h2>Tech Themes - Control Yourself and Others</h2>
-      <p>Posted: October 4, 2015</p>
-      <h3>The Benefits of Control</h3>
-      <p>Version control is like living for today and not giving up the past. Version control is when each of us gets our own way, and the group stays happy. Version control is being in two places at once.</p>
-      <p><a href="#">Read more</a></p>
-      <img src="imgs/haitiShore.jpg" width="400" alt="Filming in Haiti">
-    </section>
-
-    <section>
-      <div>
-        <h2>Blog</h2>
-        <ul>
-          <li><a href="#">First Blog Link</a></li>
-          <li><a href="#">Second Blog Link</a></li>
-        </ul>
-      </div>
-
-      <div>
-        <h2>Projects</h2>
-        <ul>
-            <li><a href="#">First Project</a>
-            <li><a href="#">Second Project</a></li>
-        </ul>
-      </div>
-      <div>
-
-        <h2>Videos</h2>
-        <ul>
-          <li><a href="#">First Video link</a></li>
-          <li><a href="#">Second Video link</a></li>
-        </ul>
+    <div class="container">
+      <header>
+        <div class="row">
+          <div class="head-logo">
+            <img src="#" alt="logo">
+            <h2 class="inline">Welcome to Brian's Site</h2>
+          </div>
+          <div class="head-links text-right">
+            <nav>
+              <a href="blog/index.html" class="navlink">Blog</a>
+              <a href="#" class="navlink">Projects</a>
+              <a href="#" class="navlink">Videos</a>
+              <a href="#" class="navlink">Places</a>
+            </nav>
+          </div>
         </div>
-    </section>
+      </header>
+  
+      <main>
+        <div id="container-main">
+          <div class="fl-left half-row">
+            <div class="text-box">
+              <h1>Featured Blog Post</h1>
+                <h2>Tech Themes - Control Yourself and Others</h2>
+                <p>Posted: October 4, 2015</p>
+                <h3>The Benefits of Control</h3>
+                <p>Version control is like living for today and not giving up the past. Version control is when each of us gets our own way, and the group stays happy. Version control is being in two places at once.</p>
+                <p><a href="#" class="link-bold">Read more</a></p>
+              </div>
+            </div>
+            <div class="fl-right half-row">
+              <img src="imgs/haitiShore.jpg" alt="Filming in Haiti" class="pic-wide">
+            </div>
+        </div>   
+      </main>
+    
+      <div class="spacer">
+      </div>
+    
+      <section class="row">
+        <div class="triplet center round-box">
+          <h2>Blog</h2>
+          <ul class="no-list">
+            <li><a href="#" class="link-bold">First Blog Link</a></li>
+            <li><a href="#" class="link-bold">Second Blog Link</a></li>
+          </ul>
+        </div>
+  
+        <div class="triplet center round-box antique">
+          <h2>Projects</h2>
+          <ul class="no-list">
+              <li><a href="#" class="link-bold">First Project</a>
+              <li><a href="#" class="link-bold">Second Project</a></li>
+          </ul>
+        </div>
 
-    <section>
-      <h2>Places | Pics</h2>
-      <p><a href="#">One place</a></p>
-    </section>
-
-    <footer>
-      <p>Made by Brian Wagner | &#169; 2015</p>
-    </footer>
-
+        <div class="triplet center round-box">
+          <h2>Videos</h2>
+          <ul class="no-list">
+            <li><a href="#" class="link-bold">First Video link</a></li>
+            <li><a href="#" class="link-bold">Second Video link</a></li>
+          </ul>
+          </div>
+      </section>
+  
+    <div class="spacer">
+      </div>
+  
+      <aside class="full-size" id="wide-picture">
+        <h2>Places | Pics</h2>
+        <p><a href="#" class="link-bold">One place</a></p>
+      </aside>
+  
+    <div class="spacer">
+    </div>
+  
+      <footer>
+        <p class="center">Made by Brian Wagner | &#169; 2015</p>
+      </footer>
+    </div>
   </body>
 </html>
