Add social media links, create dummy internal pages

--- a/places.html
+++ b/places.html
@@ -2,7 +2,7 @@
 <html>
   <head>
       <meta charset="utf-8" />
-      <title>Brian's Site</title>
+      <title>Brian's Places</title>
       <link rel="stylesheet" type="text/css" href="stylesheets/default.css">
     </head>
 
@@ -31,25 +31,8 @@
       </div>
 
       <main>
-        <div id="container-main" class="brd-bottom">
-          <div class="row">
-            <div class="fl-left half-row ht-lg">
-              <div class="main-article-border ht-lg-pad">
-                <h1 class="article-header article-padding">Featured Blog Post</h1>
-                  <h2 class="article-padding">Tech Themes - Control Yourself and Others</h2>
-                  <p class="article-padding">Posted: October 4, 2015</p>
-                  <h3 class="article-padding">The Benefits of Control</h3>
-                  <p class="article-padding">Version control is like living for today and not giving up the past. Version control is when each of us gets our own way, and the group stays happy. Version control is being in two places at once.</p>
-                  <p class="article-padding"><a href="blog/git.html" class="link-bold">Read more</a></p>
-                </div>
-              </div>
-              <div class="fl-right half-row main-article-border ht-lg-pad half-row-pic-cover">
-                <div class="pic-container-main">
-                </div>
-              </div>
-              <div class="spacer bkg-white">
-              </div>
-          </div>
+        <div class="row bkg-white">
+          <h1>Places</h1>
         </div>
       </main>
 
