--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
       <meta charset="utf-8" />
       <title>Brian's Site</title>
       <link rel="stylesheet" type="text/css" href="stylesheets/default.css">
+      <link rel="icon" type"image/png" href="imgs/bri_favicon.ico"
     </head>
 
   <body>
@@ -35,10 +36,16 @@
           <div class="row">
             <div class="fl-left half-row ht-lg">
               <div class="main-article-border ht-lg-pad">
-                <h1 class="article-header article-padding">Featured Blog Post</h1>
-                  <h2 class="article-padding">Tech Themes - Control Yourself and Others</h2>
+                  <h1 class="article-header article-padding">Featured Blog Post</h1>
+                  <!-- first blog tease -->
+                  <h2 class="article-padding">What's on Your Keychain?</h2>
+                  <p class="article-padding">Posted: October 24, 2015</p>
+                  <p class="article-padding">In programming, we love to collect stuff. Sometimes on a keyring, where everthing is the same. And sometimes it's in a wallet where everything is a little different. Join me on a long-winded metaphor about arrays and hashes in Ruby.</p>
+                  <p class="article-padding"><a href="blog/array-hash.html" class="link-bold">Read more</a></p>
+
+                  <!-- second blog tease -->
+                  <h2 class="article-padding">The Benefits of Control</h2>
                   <p class="article-padding">Posted: October 4, 2015</p>
-                  <h3 class="article-padding">The Benefits of Control</h3>
                   <p class="article-padding">Version control is like living for today and not giving up the past. Version control is when each of us gets our own way, and the group stays happy. Version control is being in two places at once.</p>
                   <p class="article-padding"><a href="blog/git.html" class="link-bold">Read more</a></p>
                 </div>
