--- a/places.html
+++ b/places.html
@@ -4,6 +4,7 @@
       <meta charset="utf-8" />
       <title>Brian's Places</title>
       <link rel="stylesheet" type="text/css" href="stylesheets/default.css">
+      <link rel="icon" type"image/png" href="imgs/bri_favicon.ico"
     </head>
 
   <body>
