Finish personal site review

--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
         <div class="row bkg-white article-padding center">
           <article class="center-70 cream-bkg">
           <h1>Contact</h1>
-            <form id="contact-form" method="post" action="acknowledge.php">
+            <form id="contact-form" method="post" action=" ">
               <ul>
                 <li><label for="name">Name:</label></li>
                 <li><input type="text" name="name" id="name" placeholder="Name"/></li>
