Update blog week7; new project dir; angular on front page

--- a/about.html
+++ b/about.html
@@ -16,12 +16,12 @@
             <a href="index.html">
               <img src="imgs/b_logo2.jpg" alt="logo" class="logo-img">
             </a>
-            <h2 class="disp-inline">Welcome to Brian's Site</h2>
+            <h2 class="disp-inline"><a href="index.html" class="no-link">Welcome to Brian's Site</a></h2>
           </div>
           <div class="head-links text-right">
             <nav>
               <a href="blog/index.html" class="navlink">Blog</a>
-              <a href="projects.html" class="navlink">Projects</a>
+              <a href="projects/index.html" class="navlink">Projects</a>
               <a href="videos.html" class="navlink">Videos</a>
               <a href="about.html" class="navlink">About</a>
             </nav>
