Fix unclosed link rel in head on all pages

--- a/videos.html
+++ b/videos.html
@@ -4,7 +4,7 @@
       <meta charset="utf-8" />
       <title>Brian's Videos</title>
       <link rel="stylesheet" type="text/css" href="stylesheets/default.css">
-      <link rel="icon" type"image/png" href="imgs/bri_favicon.ico"
+      <link rel="icon" type"image/png" href="imgs/bri_favicon.ico">
     </head>
 
   <body>
