--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
       <title>About Me</title>
       <link rel="stylesheet" type="text/css" href="stylesheets/default.css">
       <link rel="stylesheet" type="text/css" href="stylesheets/blog.css">
-      <link rel="icon" type"image/png" href="imgs/bri_favicon.ico"
+      <link rel="icon" type"image/png" href="imgs/bri_favicon.ico">
     </head>
 
   <body>
