--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
       <title>Brian's Contact Form</title>
       <link rel="stylesheet" type="text/css" href="stylesheets/default.css">
       <link rel="stylesheet" type="text/css" href="stylesheets/form.css">
-      <link rel="icon" type"image/png" href="imgs/bri_favicon.ico"
+      <link rel="icon" type"image/png" href="imgs/bri_favicon.ico">
     </head>
 
   <body>
