--- a/projects/index.html
+++ b/projects/index.html
@@ -43,7 +43,7 @@
           <div class="row brd-bottom">
             <div class="row-30 project-pic white-text">
               <h2 class="article-padding"><a href="raindrop/index.html" class="no-link">Raindrop</a></h2>
-              <a href="raindrop/index.html"><img src="../imgs/raindrop-sample.jpg" alt="project-one" class="project-img"></a>
+              <a href="raindrop/index.html"><img src="../imgs/raindrop-sample.jpg" alt="Raindrop game" class="project-img"></a>
             </div>
             <div class="row-70">
               <h3 class="article-padding">Use Javascript to water the flowers and get a high score!</h3>
@@ -55,14 +55,31 @@
         <div class="spacer"></div>
 
         <!-- second project -->
-          <div class="row">
+          <div class="row brd-bottom">
             <div class="row-30 project-pic white-text">
               <h2 class="article-padding"><a href="http://windowpanemedia.com/game" class="no-link">Fast Football</a></h2>
-              <a href="http://windowpanemedia.com/game"><img src="../imgs/football-sample.jpg" alt="project-one" class="project-img"></a>
+              <a href="http://windowpanemedia.com/game"><img src="../imgs/football-sample.jpg" alt="Fast football game" class="project-img"></a>
             </div>
             <div class="row-70">
               <h3 class="article-padding">Avoid the head injuries and play football online!</h3>
               <p class="article-padding">Here's a game I made to help teach myself Javascript. I borrowed the format from an old tabletop card game that I had as a kid. It was an interesting experience to think about the internal mechanics that are involved, and how to modify the game mechanic for online play.</p>
+            </div>
+          </div>
+
+        <div class="spacer">
+        </div>
+
+      <!-- brd-bottom NOT included on last project div -->
+      <!-- third project -->
+          <div class="row">
+            <div class="row-30 project-pic white-text">
+              <h2 class="article-padding"><a href="http://windowpanemedia.com/videoNoter" class="no-link">Video Noter</a></h2>
+              <a href="http://windowpanemedia.com/videoNoter"><img src="../imgs/videoNoter.jpg" alt="Video noter img" class="project-img"></a>
+            </div>
+            <div class="row-70">
+              <h3 class="article-padding">Take notes, make comments on a video, with time stamps</h3>
+              <p class="article-padding">Making videos is a team effort, and everyone wants to have an opinion on a work in progress. So take notes, make comments, have your voice heard on every second in the video! I built this tool to record comments and time code for a video.</p>
+              <p class="article-padding"> This is built on <a href="http://popcornjs.org">Popcorn.js</a>, a cool platform for working with video on the web. Thanks, Mozilla. Unfortunately, it seems they've stopped developing it. But the framework is still there, and it's a great base for this tool. </p>
             </div>
             <div class="spacer"></div>
           </div>
