--- a/projects/index.html
+++ b/projects/index.html
@@ -57,6 +57,22 @@
         <!-- second project -->
           <div class="row brd-bottom">
             <div class="row-30 project-pic white-text">
+              <h2 class="article-padding"><a href="cheat-sheet.html" class="no-link">Cheat Sheet</a></h2>
+              <a href="cheat-sheet.html"><img src="../imgs/cheat-sheet.jpg" alt="Cheat Sheet img" class="project-img"></a>
+            </div>
+            <div class="row-70">
+              <h3 class="article-padding">The only thing worse than being wrong, is being a cheater!</h3>
+              <p class="article-padding">Kidding! Don't mix up your coding syntax just because you're tired, or your memory is gone, or you stayed up too late playing Destiny. Check your chea-... let's call it a crib sheet, and get the code right!</p>
+              <p class="article-padding">I structured this in Angular.js, as an exercise in learning that framework. It's a neat tool to spit out your data in a structured way without having to fiddle with the html files. Sort of a poor man's CMS. I know just enough to get my data on the page. Angular does a lot more than I can figure out as yet. But I'll get back to it soon.</p>
+            </div>
+          </div>
+
+        <div class="spacer">
+        </div>
+
+        <!-- third project -->
+          <div class="row brd-bottom">
+            <div class="row-30 project-pic white-text">
               <h2 class="article-padding"><a href="http://windowpanemedia.com/game" class="no-link">Fast Football</a></h2>
               <a href="http://windowpanemedia.com/game"><img src="../imgs/football-sample.jpg" alt="Fast football game" class="project-img"></a>
             </div>
@@ -70,7 +86,7 @@
         </div>
 
       <!-- brd-bottom NOT included on last project div -->
-      <!-- third project -->
+      <!-- last project -->
           <div class="row">
             <div class="row-30 project-pic white-text">
               <h2 class="article-padding"><a href="http://windowpanemedia.com/videoNoter" class="no-link">Video Noter</a></h2>
@@ -81,6 +97,7 @@
               <p class="article-padding">Making videos is a team effort, and everyone wants to have an opinion on a work in progress. So take notes, make comments, have your voice heard on every second in the video! I built this tool to record comments and time code for a video.</p>
               <p class="article-padding"> This is built on <a href="http://popcornjs.org">Popcorn.js</a>, a cool platform for working with video on the web. Thanks, Mozilla. Unfortunately, it seems they've stopped developing it. But the framework is still there, and it's a great base for this tool. </p>
             </div>
+          <!-- last project has spacer below // delete if new project added below -->
             <div class="spacer"></div>
           </div>
 
