Finish project page with two videos

--- a/videos.html
+++ b/videos.html
@@ -4,6 +4,8 @@
       <meta charset="utf-8" />
       <title>Brian's Videos</title>
       <link rel="stylesheet" type="text/css" href="stylesheets/default.css">
+      <link rel="stylesheet" type="text/css" href="stylesheets/blog.css">
+      <link rel="stylesheet" type="text/css" href="stylesheets/projects.css">
       <link rel="icon" type"image/png" href="imgs/bri_favicon.ico">
     </head>
 
@@ -32,15 +34,37 @@
       </div>
 
       <main>
-        <div class="row bkg-white">
-          <h1>Videos</h1>
+        <div class="bkg-white brd-bottom">
+          <div class="row">
+            <h1 class="article-padding">Videos</h1>
+          </div>
+
+          <div class="row brd-bottom">
+            <div class="row-30">
+              <h3 class="article-padding project-pic white-text">Iraq Documentary</h3>
+              <p class="article-padding">In 2013, I had the opportunity to go to Iraq and help produce a documentary with a group of Iraqi journalists. The film was about the nation's oil industry and how it has driven many recent historical events. After having made many reporting trips to Latin America, this was my first time in the Middle East. </p>
+            </div>
+            <div class="row-70">
+              <iframe src="https://player.vimeo.com/video/66065377" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="fit-video"></iframe>
+            </div>
+          </div>
+
+          <div class="spacer"></div>
+
+          <div class="row">
+            <div class="row-30">
+              <h3 class="article-padding project-pic white-text">Miami Critical Mass</h3>
+              <p class="article-padding">When I lived in Miami, the Critical Mass bike ride was becoming a big deal. Like really big. So I wanted to show how big, and do that with some time lapse footage. My cleverest idea was to ride at the front of the pack, stop at an intersection and film the rest of the mass passing by. Well, after a few minutes, the drivers behind me were getting really angry. And the crowd kept going. Too big for me to capture comfortably. But you get an idea, just how many rabble-rousing bike riders Miami has.</p>
+            </div>
+            <div class="row-70">
+              <iframe src="https://player.vimeo.com/video/46773821" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="fit-video"></iframe>
+            </div>
+          </div>
+          <div class="spacer"></div>
         </div>
       </main>
 
-      <div class="spacer">
-      </div>
-
-      <div class="row">
+<!--       <div class="row">
         <div class="triplet center brd-full-primary round-box antique">
           <h2>Blog</h2>
           <ul class="no-list">
@@ -64,7 +88,7 @@
             <li><a href="#" class="link-bold">Second Video link</a></li>
           </ul>
           </div>
-      </div>
+      </div> -->
 
     <div class="spacer">
       </div>
