Fix bad contact page, style and link

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
         <div class="triplet center brd-full-primary round-box antique">
           <h2>Videos</h2>
           <ul class="no-list">
-            <li><a href="#" class="link-bold">First Video link</a></li>
-            <li><a href="#" class="link-bold">Second Video link</a></li>
+            <li><a href="videos.html" class="link-bold">Iraq Oil Doc</a></li>
+            <li><a href="videos.html#critical-mass" class="link-bold">Miami Critical Mass Timelapse</a></li>
           </ul>
           </div>
       </div>
