--- a/videos.html
+++ b/videos.html
@@ -17,12 +17,12 @@
             <a href="index.html">
               <img src="imgs/b_logo2.jpg" alt="logo" class="logo-img">
             </a>
-            <h2 class="disp-inline">Welcome to Brian's Site</h2>
+            <h2 class="disp-inline"><a href="index.html" class="no-link">Welcome to Brian's Site</a></h2>
           </div>
           <div class="head-links text-right">
             <nav>
               <a href="blog/index.html" class="navlink">Blog</a>
-              <a href="projects.html" class="navlink">Projects</a>
+              <a href="projects/index.html" class="navlink">Projects</a>
               <a href="videos.html" class="navlink">Videos</a>
               <a href="about.html" class="navlink">About</a>
             </nav>
@@ -53,7 +53,7 @@
 
           <div class="row">
             <div class="row-30">
-              <h3 class="article-padding project-pic white-text">Miami Critical Mass</h3>
+              <h3 class="article-padding project-pic white-text"><a name="critical-mass" class="no-link">Miami Critical Mass</a></h3>
               <p class="article-padding">When I lived in Miami, the Critical Mass bike ride was becoming a big deal. Like really big. So I wanted to show how big, and do that with some time lapse footage. My cleverest idea was to ride at the front of the pack, stop at an intersection and film the rest of the mass passing by. Well, after a few minutes, the drivers behind me were getting really angry. And the crowd kept going. Too big for me to capture comfortably. But you get an idea, just how many rabble-rousing bike riders Miami has.</p>
             </div>
             <div class="row-70">
