--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
       </div>
 
       <main>
-        <div class="row bkg-white">
+        <div class="row bkg-white brd-bottom">
 
           <article class="row center-80 center brd-bottom align-middle">
             <p><img src="imgs/me_bike.jpg" alt="Me on a bike" class="circle-pic fl-left"/></p>
@@ -100,7 +100,7 @@
 
       <div class="spacer"></div>
 
-      <div class="row">
+<!--       <div class="row">
         <div class="triplet center brd-full-primary round-box antique">
           <h2>Blog</h2>
           <ul class="no-list">
@@ -124,10 +124,7 @@
             <li><a href="#" class="link-bold">Second Video link</a></li>
           </ul>
           </div>
-      </div>
-
-    <div class="spacer">
-      </div>
+      </div> -->
 
       <aside>
         <div class="row">
