--- a/bad-contact.html
+++ b/bad-contact.html
@@ -2,10 +2,8 @@
 <html>
   <head>
       <meta charset="utf-8" />
-      <title>Brian's Videos</title>
+      <title>Brian's Contact Form</title>
       <link rel="stylesheet" type="text/css" href="stylesheets/default.css">
-      <link rel="stylesheet" type="text/css" href="stylesheets/blog.css">
-      <link rel="stylesheet" type="text/css" href="stylesheets/projects.css">
       <link rel="stylesheet" type="text/css" href="stylesheets/form.css">
       <link rel="icon" type"image/png" href="imgs/bri_favicon.ico">
     </head>
@@ -34,11 +32,12 @@
       <div class="spacer bkg-white">
       </div>
 
+      <!-- main content here -->
       <main>
-        <div class="row bkg-white center brd-bottom">
+        <div class="row bkg-white article-padding center brd-bottom">
           <article class="center-70 cream-bkg">
-           <h1>Contact</h1>
-            <form id="contact-form">
+          <h1>Contact</h1>
+            <form id="contact-form" method="post" action=" ">
               <ul>
                 <li><label for="name">Name:</label></li>
                 <li><input type="text" name="name" id="name" placeholder="Name"/></li>
@@ -50,12 +49,9 @@
               </ul>
             </form>
           </article>
-        <div class="spacer"> </div>
+          <div class="spacer"> </div>
         </div>
       </main>
-
-    <div class="spacer">
-      </div>
 
       <aside>
         <div class="row">
@@ -71,12 +67,11 @@
         </div>
       </aside>
 
-    <div class="spacer">
-    </div>
+    <div class="spacer"> </div>
 
       <footer>
         <div class="footer">
-        <!-- social media links -->
+          <!-- social media links -->
           <div class="center">
             <ul class="social-links center">
               <li><a href="https://www.linkedin.com/in/brianwagnerfilm"><img src="imgs/linkedin.png" alt="linkedin link"></a></li>
