--- a/projects/cheat-sheet.html
+++ b/projects/cheat-sheet.html
@@ -40,7 +40,7 @@
             <div class="article-padding" ng-repeat="cheat in cheatSheet">
               <h3><a name="{{ cheat.name }}"> {{ cheat.title }}</a></h3>
               <p> {{ cheat.content }}</p>
-              <p class="code-well">{{ cheat.example }}</p>
+              <p class="code-well pre-wrap">{{ cheat.example }}</p>
             </div>
             <div class="spacer"> </div>
           </div>
