Fix styling on front, add Haiti banner; add links to banners

--- a/index.html
+++ b/index.html
@@ -49,8 +49,15 @@
                 </div>
               </div>
             </div>
-              <div class="fl-right half-row main-article-border ht-lg-pad half-row-pic-cover">
+            <!-- right-side main box -->
+              <div class="half-row main-article-border ht-lg-pad half-row-pic-cover">
                 <div class="pic-container-main">
+                  <div class="label-box label-fit-main">
+                    <a href="http://www.voanews.com/content/voa-correspondent-reports-on-latest-relief-efforts-in-haiti-81878067/111512.html" class="link-bold">
+                      <p class="label-text">Jacmel, Haiti</p>
+                      <p class="label-text">January 2010</p>
+                    </a>
+                  </div>
                 </div>
               </div>
               <div class="spacer bkg-white">
@@ -103,8 +110,8 @@
         <div class="row">
           <h2 class="article-padding">Places</h2>
           <div class="ht-md pic-cover brd-top brd-bottom">
-            <div class="label-box fl-right">
-              <a href="#" class="link-bold">
+            <div class="label-box label-fit-landscape">
+              <a href="https://www.flickr.com/search/?text=pinnacles%20national%20park" class="link-bold">
                 <p class="label-text">Pinnacles National Park</p>
                 <p class="label-text">Central California</p>
               </a>
