Fix html to reflect new place banner css

--- a/about.html
+++ b/about.html
@@ -130,7 +130,7 @@
         <div class="row">
           <h2 class="article-padding">Places</h2>
           <div id="dc-cover" class="ht-md brd-top brd-bottom">
-            <div class="label-box fl-right">
+            <div class="label-box label-fit-landscape">
               <a href="#" class="link-bold">
                 <p class="label-text">Washington Monument</p>
                 <p class="label-text">Washington, DC</p>
