--- a/projects/index.html
+++ b/projects/index.html
@@ -112,7 +112,7 @@
         <div class="row">
           <h2 class="article-padding">Places</h2>
           <div class="ht-md pic-cover brd-top brd-bottom">
-            <div class="label-box fl-right">
+            <div class="label-box label-fit-landscape">
               <a href="#" class="link-bold">
                 <p class="label-text">Pinnacles National Park</p>
                 <p class="label-text">Central California</p>
@@ -135,7 +135,7 @@
               <li><a href="https://twitter.com/hazelmaeby"><img src="../imgs/twitter.jpg" alt="twitter link"></a></li>
             </ul>
           </div>
-          <p class="center">Made by Brian Wagner | &#169; 2015 | <a href="contact.html">Contact</a></p>
+          <p class="center">Made by Brian Wagner | &#169; 2015 | <a href="../contact.html">Contact</a></p>
         </div>
       </footer>
     </div>
