New url for entertainment guide; fix favicon link

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
 <head>
   <title>Brian Wagner - Portfolio</title>
+
+  <link rel="icon" type="image/x-icon" href="imgs/bri_favicon.ico">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href='https://fonts.googleapis.com/css?family=Fira+Sans:400,700,400italic' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -85,11 +88,11 @@
         </ul>
       </div>
       <div class="col-md-6 centered">
-        <a href="http://windowpanemedia.com/resources/code/entertainment_guide/movies.html"><img src="portfolio-imgs/entertainment.jpg"></a>
+        <a href="http://windowpanemedia.com/guide/"><img src="portfolio-imgs/entertainment.jpg"></a>
         <!-- caption row -->
         <div class="row image-cap">
           <div class="col-md-6">
-            <p class="centered"><a href="http://windowpanemedia.com/resources/code/entertainment_guide/movies.html">Live site</a></p>
+            <p class="centered"><a href="http://windowpanemedia.com/guide/">Live site</a></p>
           </div>
           <div class="col-md-6">
             <p class="centered"><a href="https://github.com/briwagner/entertainment_guide">Code</a></p>
