--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li><a href="#angular">Angular JS</a></li>
             <li><a href="#javascript">Javascript</a></li>
             <li><a href="#html5">HTML5 / CSS3</a></li>
-            <li><a href="http://windowpanemedia.com">Video</a></li>
+              <li><a href="http://blog.windowpanemedia.com">Blog</a>
           </ul>
         </div>
         <div class="col-md-3">
